Added What is Stub section. Fixed Art Projects tags.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -16,6 +16,7 @@
 @import 'partials/section--intro';
 @import 'partials/section--bio';
 @import 'partials/section--projects';
+@import 'partials/section--what-is';
 
 
 body {
