--- a/src/scss/partials/_section--projects.scss
+++ b/src/scss/partials/_section--projects.scss
@@ -13,7 +13,7 @@
 	@include mq('md') { height: 400px; }
 	@include mq('lg') { height: 400px; }
 	@include mq('xl') { height: 350px; }
-	@include mq('xxl') { height: 450px; }
+	// @include mq('xxl') { height: 450px; }
 
 	overflow: visible;
 }
@@ -32,17 +32,14 @@
  */
 
 .glide__slide {
-	opacity: 1;
-	    position: relative;
+	position: relative;
 	background-size: cover;
 	background-position: center center;
-	@include mq('lg') {
-		// opacity: 0.6;
-		transition: opacity 0.1s ease-in-out;
-	}
+	opacity: 0;
 
 	img {
 		opacity: 0.6;
+		transition: opacity 0.1s ease-in-out;
 	}
 }
 
@@ -65,13 +62,13 @@
 
 
 // http://bennettfeely.com/clippy/
-.art-project__type--1 {
+.art-project__type--1 img {
+	clip-path: polygon(13% 0, 100% 0%, 88% 100%, 0% 100%);
 }
 
-.art-project__type--2 {
-	// clip-path: circle(50% at 50% 50%);
+.art-project__type--2 img {
+	clip-path: polygon(50% 0%, 100% 14%, 100% 87%, 50% 100%, 0 85%, 0 13%);
 }
-
 
 
 .glide__arrows {
@@ -107,9 +104,10 @@
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
+	
 }
 
-.glide__slide:hover img{
+.glide__slide:hover img {
 	opacity: 0.8;
 }
 
@@ -126,13 +124,7 @@
 // 	opacity: 1;
 // }
 
-.tag--1:before {
-	content: 'production';
-}
 
-.tag--2:before {
-	content: 'event';
-}
 
 .slide__position-counter {
 	display: flex;
@@ -147,9 +139,10 @@
   font-family: 'K-Regular', sans-serif;
 
 }
+
 .slide__tag {
 	// background: #5d6163;
-    padding: 0.15rem 0.25rem 0.2rem 0.25rem;
+	padding: 0.15rem 0.25rem 0.2rem 0.25rem;
     border-radius: 2px;
     color: white;
     font-size: 0.8rem;
@@ -158,9 +151,20 @@
     left: 0.25rem;
     font-family: sans-serif;
     opacity: 0.9;
-    border-bottom: 1px solid gray;
+    background-color: #3a3a3a;
 }
 
+.slide__tag:hover {
+	opacity: 1;
+}
+
+.tag--1:before {
+	content: 'production';
+}
+
+.tag--2:before {
+	content: 'event';
+}
 
 // $gray--light: #F5F5F5;
 // $gray--mid: #B8BDC2;
