--- a/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
+++ b/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
@@ -3,9 +3,17 @@
         <li class="glide__slide
                     art-project__type--{{ artProjectType }}">
             <img class="slide__image" src=".{{ artProjectImagePath }}">
-            <h2 class="slide__description h1--sans slide__title">{{ artProjectTitle }}</h2>
+{{!--             <h2 class="slide__description h1--sans slide__title">
+                <span>{{ artProjectTitle }}</span>
+                <span class="slide__tag tag--{{ artProjectType }}"></span>
+            </h2> --}}
+            <h2 class="slide__description h1--sans slide__title">
+                <span>{{ artProjectTitle }}</span>
+            </h2>
+                <div class="slide__tag tag--{{ artProjectType }}"></div>
+
             {{!-- <p class="">{{ artProjectDescription }}</p> --}}
-            <div class="slide__tag tag--{{ artProjectType }}"></div>
+            
         </li>
     {{/each}}
 </ul>
