--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -59,50 +59,43 @@ $nav--item-left-offset: 6rem;
 }
 
 .nav__item--this {
-    top: 4rem;
+	top: 4.25rem;
 }
 
-.nav__item--previous { 
-    top: 1.5rem;
-    cursor: pointer;
+.nav__item--previous {
+	top: 1.5rem;
+	cursor: pointer;
 }
 
-
-.nav__item--next { 
-    bottom: 1.5rem;
+.nav__item--next {
+	bottom: 1.5rem;
   cursor: pointer;
 }
 
-.yo {
-  background-color: yellow;
-    position: absolute;
-    bottom: 13rem;
-}
-
 .nav__section-line-bg {
-  position: absolute;
-  top: 0;
-  left: $nav--item-left-offset;
-  height: 100vh;
-  width: 1px;
-  background-color: $palette--green;
+	position: absolute;
+	top: 0;
+	left: $nav--item-left-offset;
+	height: 100vh;
+	width: 1px;
+	background-color: $palette--green;
+	opacity: 0.3;
 }
 
 .nav__section--intro {
-  .nav__section-line-bg {
-    height: 100px;
-    justify-content: flex-end;
-    top: auto;
-    bottom: 0;
-  }
-
-  .nav__section-line-active {
-    bottom: 3.25rem;
-    top: auto;
-    animation: flickerAnimation 2s infinite;
-    cursor: pointer;
-    z-index: 2;
-  }
+  	.nav__section-line-bg {
+		height: 100px;
+		justify-content: flex-end;
+		top: auto;
+		bottom: 0;
+  	}
+	.nav__section-line-active {
+		bottom: 3.25rem;
+		top: auto;
+		animation: flickerAnimation 2s infinite;
+		cursor: pointer;
+		z-index: 2;
+	}
 }
 
 
@@ -145,6 +138,6 @@ $nav--item-left-offset: 6rem;
 
 .nav__item-label--this {
   margin-left: 5.5rem;
-      font-size: 1rem;
-    color: white;
+	  font-size: 1rem;
+	color: white;
 }
