projects destroy/rebuild bug: WIP

--- a/src/scss/partials/_section--projects.scss
+++ b/src/scss/partials/_section--projects.scss
@@ -35,7 +35,8 @@
 	position: relative;
 	background-size: cover;
 	background-position: center center;
-	opacity: 0;
+	// opacity: 0;
+        min-width: 300px;
 
 	img {
 		// opacity: 0.6;
