first pass of swup to test file

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -62,8 +62,11 @@ html.is-animating .transition-fade {
     }
 }
 
+.project-bg--start {
+    background-color: $palette--navy;
+}
 
-.project-bg {
+.project-bg--end {
     background-color: $palette--turquoise-blue;
     color: white;
 }
