--- a/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
+++ b/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
@@ -7,8 +7,7 @@
                 
                 <span class="slide__tag tag--{{ artProjectType }}"></span>
             </h2> --}}
-            <a class="slide__title">{{ artProjectTitle }}</a>
-
+            <a href="/project1.html" class="slide__title">{{ artProjectTitle }}</a>
             
             {{!-- <div class="slide__ tag tag--{{ artProjectType }}"></div> --}}
 
