Fixed index page FOUC

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -61,7 +61,7 @@ html.is-animating .transition-fade {
         background-position: 0% 00%
     }
 }
-
+//
 .project-bg--start {
     background-color: $palette--navy;
 }
@@ -70,3 +70,5 @@ html.is-animating .transition-fade {
     background-color: $palette--turquoise-blue;
     color: white;
 }
+
+
