--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,6 +4,8 @@
 // Optional Theme Stylesheet
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
 
+@import "node_modules/plyr/src/sass/plyr";
+
 @import 'partials/mq';
 @import 'partials/mq-debugger';
 @import 'partials/colors';
@@ -17,7 +19,7 @@
 @import 'partials/section--bio';
 @import 'partials/section--projects';
 @import 'partials/section--what-is';
-
+@import 'project-detail';
 
 body {
     position: relative; 
@@ -38,5 +40,8 @@ body {
 }
 
 
-
-
+.bg__diags {
+    position: absolute;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAOklEQVQoU43MSwoAMAgD0eT+h7ZYaOlHo7N+DNHL2HAGgBWcyGcKbqTghTL4oQiG6IUpOqFEC5bI4QD8PAoKd9j4XwAAAABJRU5ErkJggg==);
+    mix-blend-mode: soft-light;
+}
