Updated to Node LTS. Init and destro glide on section switch. Updated Greensock to latest.

--- a/src/scss/partials/_section--projects.scss
+++ b/src/scss/partials/_section--projects.scss
@@ -276,11 +276,11 @@ $poofheight: 90vh;
 //	width: 100vw;
 // }
 
-.projects__tag-types {
-	display: inline-flex;
-    flex-wrap: nowrap;
-    margin-left: 1rem;
-}
+// .projects__tag-types {
+// 	display: inline-flex;
+//     flex-wrap: nowrap;
+//     margin-left: 1rem;
+// }
 
 // .projects__tag-types:before {
 // 	content: ' ';
