--- a/src/scss/partials/_section--intro.scss
+++ b/src/scss/partials/_section--intro.scss
@@ -2,36 +2,13 @@
 
 .section--intro {
 	position: relative;
-	display: grid;
-
-	height: 100vh;
 	width: 100vw;
+
 	background-color: $palette--navy;
 
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-	grid-template-areas:    					
-												". . . . . . . . . ."
-												". . . . . . . . . ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". a a a a a a a a ."
-												". . . . . . . . . ."
-												". . . . . . . . . .";
-
-
-
 	@include mq('md') {
-
+		display: grid;
+		height: 100vh;
 		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 		grid-template-rows: 1fr 1fr 1fr;
 		grid-template-areas:    					". . . . . . . ."
@@ -80,6 +57,7 @@
 	width: 100vw;
 	height: 100vh;
 	position: absolute;
+	pointer-events: none;
 }
 
 .intro__image {
@@ -93,12 +71,17 @@
 }
 
 .intro__text-wrapper {
-	grid-area: a;
-	align-self: center;
+	padding: 1rem;
 	z-index: 3;
-
 	color: #276688;
 	line-height: 1.15;
+
+	@include mq('md') {
+		padding: 0;
+		grid-area: a;
+		align-self: center;
+	}
+
 }
 
 .hide-xs {
@@ -155,6 +138,9 @@
 }
 
 .intro__link {
+    position: relative;
+    z-index: 1;
+
 	visibility: inherit;
 	padding: 0.2rem 0.1rem 0.2rem 0.2rem;
 
@@ -278,4 +264,6 @@
 	height: 13rem;
 	left: 160px;
 	bottom: -5rem;
+	pointer-events: none;
+
 }
