hiding project filtering

--- a/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
+++ b/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
@@ -10,7 +10,7 @@
 
 
             <a href="#" class="slide__title js-slide-detail-link">
-                {{#ifEquals artProjectType "1"}}
+{{!--                 {{#ifEquals artProjectType "1"}}
                     <i class="slide__title-icon
                                 slide__title-icon--circle
                                 material-icons
@@ -20,8 +20,9 @@
                             slide__title-icon--square
                             material-icons
                             material__icon--square">stop</i>
-                {{/ifEquals}}
-            {{ artProjectTitle }}</a>
+                {{/ifEquals}} --}}
+                {{ artProjectTitle }}
+            </a>
 
             {{!-- <div class="slide__ tag tag--{{ artProjectType }}"></div> --}}
 
