--- a/src/scss/partials/_section--projects.scss
+++ b/src/scss/partials/_section--projects.scss
@@ -13,7 +13,7 @@
 }
 
 .glide__slides {
-	height: 60vh; 
+	height: 60vh;
 	@include mq('md') { height: 400px; }
 	@include mq('lg') { height: 400px; }
 	@include mq('xl') { height: 350px; }
@@ -22,7 +22,7 @@
 	overflow: visible;
 }
 
-/* 
+/*
     $breakpoints: (
 	    "xxs":  1px,
 	    "xs":   400px,
@@ -41,7 +41,7 @@
 	background-position: center center;
 	// opacity: 0;
     min-width: 300px;
-    
+
     // @todo: only on non-swipe
     cursor: default;
 
@@ -69,8 +69,8 @@
 // diagonal
 // .glide__slide:nth-child(odd) .slide__image { clip-path: polygon( 100% 0%, 100% 0%, 0% 100%, 0 100%); }
 
-.art-project__type--1 img, 
-.art-project__type--2 img { 
+.art-project__type--1 img,
+.art-project__type--2 img {
   // display: inline-block;
   // width: 250px;
   // height: 250px;
@@ -79,8 +79,8 @@
   // clip-path: polygon(100% 0%, 100% 0%, 0% 100%, 0 100%);
   // clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
   // animation: polygons 2s ease-in-out;
-  
-// 
+
+//
     // X
     // clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
 
@@ -141,7 +141,7 @@
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
-	
+
 }
 
 // .glide__slide:hover {
@@ -159,6 +159,7 @@
 	color: $gray--light;
 	// box-shadow: 1rem 1rem rgba(red, 0.4);
     user-select: none;
+    cursor: initial;
 }
 
 .slide__title-icon {
