stable state, fixed glide bugs. css reformatting. page still in torn down state.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,8 +19,8 @@
 @import 'partials/section--intro';
 @import 'partials/section--bio';
 // @import 'partials/section--projects';
-// @import 'partials/section--what-is';
-// @import 'project-detail';
+@import 'partials/section--what-is';
+@import 'project-detail';
 
 body {
     // position: relative;
