--- a/src/scss/partials/_glide.scss
+++ b/src/scss/partials/_glide.scss
@@ -1,51 +1,80 @@
 //https://codepen.io/lifeinchords/pen/eagzpR?editors=0110
-
-body { background-color: blue; }
 .glide {
   position: relative;
   width: 100%;
-  box-sizing: border-box; }
-  .glide * {
-    box-sizing: inherit; }
-  .glide__track {
-    overflow: hidden; }
-  .glide__slides {
-    position: relative;
-    width: 100%;
-    list-style: none;
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-    touch-action: pan-Y;
-    overflow: hidden;
-    padding: 0;
-    white-space: nowrap;
-    display: flex;
-    flex-wrap: nowrap;
-    will-change: transform; }
-    .glide__slides--dragging {
-      user-select: none; }
-  .glide__slide {
-    width: 100%;
-    height: 100%;
-    flex-shrink: 0;
-    white-space: normal;
-    user-select: none;
-    -webkit-touch-callout: none;
-    -webkit-tap-highlight-color: transparent; }
-    .glide__slide a {
-      user-select: none;
-      -webkit-user-drag: none;
-      -moz-user-select: none;
-      -ms-user-select: none; }
-  .glide__arrows {
-    -webkit-touch-callout: none;
-    user-select: none; }
-  .glide__bullets {
-    -webkit-touch-callout: none;
-    user-select: none; }
-  .glide--rtl {
-    direction: rtl; }
+  box-sizing: border-box;
+}
 
+.glide * {
+  box-sizing: inherit;
+}
+
+.glide__track {
+  overflow: hidden;
+}
+
+.glide__slides {
+  position: relative;
+  width: 100%;
+  list-style: none;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  touch-action: pan-Y;
+  overflow: hidden;
+  padding: 0;
+  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
+  will-change: transform;
+}
+
+.glide__slides--dragging {
+  user-select: none;
+}
+
+.glide__slide {
+    display: flex;
+  width: 200px;
+  height: 400px;
+    background-size: cover;
+  background-position: center center;
+
+overflow: hidden;
+
+  /* prevents white flash */
+  /* https://github.com/glidejs/glide/issues/269 */
+    transform: translate3d(0, 0, 0);
+/*
+  width: 100%;
+  height: 100%; */
+  flex-shrink: 0;
+  white-space: normal;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+
+.glide__slide a {
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+.glide__arrows {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+
+.glide__bullets {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+
+.glide--rtl {
+  direction: rtl;
+}
 
 .glide__arrow {
   position: absolute;
@@ -64,17 +93,28 @@ body { background-color: blue; }
   cursor: pointer;
   transition: opacity 150ms ease, border 300ms ease-in-out;
   transform: translateY(-50%);
-  line-height: 1; }
-  .glide__arrow:focus {
-    outline: none; }
-  .glide__arrow:hover {
-    border-color: white; }
-  .glide__arrow--left {
-    left: 2em; }
-  .glide__arrow--right {
-    right: 2em; }
-  .glide__arrow--disabled {
-    opacity: 0.33; }
+  line-height: 1;
+}
+
+.glide__arrow:focus {
+  outline: none;
+}
+
+.glide__arrow:hover {
+  border-color: white;
+}
+
+.glide__arrow--left {
+  left: 2em;
+}
+
+.glide__arrow--right {
+  right: 2em;
+}
+
+.glide__arrow--disabled {
+  opacity: 0.33;
+}
 
 .glide__bullets {
   position: absolute;
@@ -83,7 +123,8 @@ body { background-color: blue; }
   left: 50%;
   display: inline-flex;
   list-style: none;
-  transform: translateX(-50%); }
+  transform: translateX(-50%);
+}
 
 .glide__bullet {
   background-color: rgba(255, 255, 255, 0.5);
@@ -96,31 +137,36 @@ body { background-color: blue; }
   cursor: pointer;
   line-height: 0;
   box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.1);
-  margin: 0 0.25em; }
-  .glide__bullet:focus {
-    outline: none; }
-  .glide__bullet:hover, .glide__bullet:focus {
-    border: 2px solid white;
-    background-color: rgba(255, 255, 255, 0.5); }
-  .glide__bullet--active {
-    background-color: white; }
+  margin: 0 0.25em;
+}
+
+.glide__bullet:focus {
+  outline: none;
+}
+
+.glide__bullet:hover,
+.glide__bullet:focus {
+  border: 2px solid white;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.glide__bullet--active {
+  background-color: white;
+}
 
 .glide--swipeable {
   cursor: grab;
   cursor: -moz-grab;
-  cursor: -webkit-grab; }
+  cursor: -webkit-grab;
+}
 
 .glide--dragging {
   cursor: grabbing;
   cursor: -moz-grabbing;
-  cursor: -webkit-grabbing; }
-
-.glide__slide {
-  display: flex;
-  width: 200px;
-  height: 400px;
-  background: rebeccapurple;
+  cursor: -webkit-grabbing;
 }
+
+
 .glide__slide span {
   margin: auto auto;
   color: #fff;
@@ -128,3 +174,7 @@ body { background-color: blue; }
   font-size: 6rem;
   pointer-events: none;
 }
+
+/* prevents flash and scroll snap jumps
+https://github.com/glidejs/glide/issues/269*/
+.glide__slide--active { z-index: 1; }
