--- a/src/scss/partials/_glide.scss
+++ b/src/scss/partials/_glide.scss
@@ -33,9 +33,11 @@
 }
 
 .glide__slide {
-    display: flex;
+  position: relative;
+    /* display: flex; */
   width: 200px;
   height: 400px;
+    min-width: 300px;
     background-size: cover;
   background-position: center center;
 
@@ -43,15 +45,15 @@ overflow: hidden;
 
   /* prevents white flash */
   /* https://github.com/glidejs/glide/issues/269 */
-    transform: translate3d(0, 0, 0);
+    /* transform: translate3d(0, 0, 0); */
 /*
   width: 100%;
   height: 100%; */
-  flex-shrink: 0;
-  white-space: normal;
+  /* flex-shrink: 0; */
+  /* white-space: normal;
   user-select: none;
   -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent; */
 }
 
 
