--- a/src/scss/partials/_glide.scss
+++ b/src/scss/partials/_glide.scss
@@ -42,18 +42,19 @@
   background-position: center center;
 
 overflow: hidden;
+background-color: blue;
 
   /* prevents white flash */
   /* https://github.com/glidejs/glide/issues/269 */
-    /* transform: translate3d(0, 0, 0); */
+    transform: translate3d(0, 0, 0);
 /*
   width: 100%;
   height: 100%; */
   /* flex-shrink: 0; */
-  /* white-space: normal;
-  user-select: none;
+  white-space: normal;
+  /* user-select: none; */
   -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent; */
+  -webkit-tap-highlight-color: transparent;
 }
 
 
